data/derived/comb/progs/unify/prog3999.ml.out
Characters 51-52:
  if (listReverse (explode w)) = w then true
                                 ^
Error: This expression has type string but an expression was expected of type
         char list
